[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Jörn Horstmann <git@jhorstmann.net>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
once_cell = "1.5"
#nalgebra = "0.23"